--- a/caddy/compose.yaml
+++ b/caddy/compose.yaml
@@ -7,6 +7,8 @@ services:
       - 80:80
       - 443:443
       - 443:443/udp
+    extra_hosts:
+      - host.docker.internal:host-gateway
     volumes:
       - /mnt/hdd/caddy/caddyfile:/etc/caddy
       - /mnt/hdd/caddy/site:/srv
