--- a/dozzle/compose.yaml
+++ b/dozzle/compose.yaml
@@ -6,3 +6,5 @@ services:
       - /var/run/docker.sock:/var/run/docker.sock
     ports:
       - 10400:8080
+    restart: unless-stopped
+networks: {}
