--- a/immich/compose.yaml
+++ b/immich/compose.yaml
@@ -14,7 +14,7 @@ services:
     depends_on:
       - redis
       - database
-    restart: always
+    restart: unless-stopped
     cpus: 1.5
     healthcheck:
       disable: false
@@ -30,7 +30,7 @@ services:
     #   service: cpu # set to one of [armnn, cuda, openvino, openvino-wsl] for accelerated inference - use the `-wsl` version for WSL2 where applicable
     volumes:
       - model-cache:/cache
-    restart: always
+    restart: unless-stopped
     cpus: 1.5
     healthcheck:
       disable: false
@@ -41,7 +41,7 @@ services:
     image: docker.io/redis:6.2-alpine@sha256:148bb5411c184abd288d9aaed139c98123eeb8824c5d3fce03cf721db58066d8
     healthcheck:
       test: redis-cli ping || exit 1
-    restart: always
+    restart: unless-stopped
     networks:
       - immich
   database:
@@ -68,7 +68,7 @@ services:
     command: postgres -c shared_preload_libraries=vectors.so -c
       'search_path="$$user", public, vectors' -c logging_collector=on -c
       max_wal_size=2GB -c shared_buffers=512MB -c wal_compression=on
-    restart: always
+    restart: unless-stopped
     ports: []
     networks:
       - immich
