--- a/openwebui/compose.yaml
+++ b/openwebui/compose.yaml
@@ -8,7 +8,7 @@ services:
     container_name: open-webui
     extra_hosts:
       - host.docker.internal:host-gateway
-    restart: always
+    restart: unless-stopped
     image: ghcr.io/open-webui/open-webui:dev
 volumes:
   open-webui: {}
