--- a/monitor/compose.yaml
+++ b/monitor/compose.yaml
@@ -1,7 +1,7 @@
 services:
   node:
     container_name: node
-    build: ./app
+    build: https://github.com/lucaslng/pimonitor.git:.
     ports:
       - 3000:3000
     restart: unless-stopped
