--- a/pimonitor/compose.yaml
+++ b/pimonitor/compose.yaml
@@ -1,6 +1,6 @@
 services:
   node:
-    container_name: node
+    container_name: pimonitor
     build: https://github.com/lucaslng/pimonitor.git:.
     ports:
       - 3000:3000
